Externalize strings on JUnit launch configuration tab

--- a/org.eclipse.jdt.junit/src/org/eclipse/jdt/internal/junit/ui/JUnitMessages.properties
+++ b/org.eclipse.jdt.junit/src/org/eclipse/jdt/internal/junit/ui/JUnitMessages.properties
@@ -135,7 +135,11 @@ JUnitLaunchConfigurationTab_method_text_decoration=Omit the method name to run a
 JUnitLaunchConfigurationTab_select_method_header=Choose a test method for ''{0}'':
 JUnitLaunchConfigurationTab_select_method_title=Test Method Selection
 JUnitLaunchConfigurationTab_all_methods_text=(all methods)
+JUnitLaunchConfigurationTab_checkbox_filter_exclude=Exclude
+JUnitLaunchConfigurationTab_checkbox_filter_include=Include
 JUnitLaunchConfigurationTab_label_containerTest=Run &all tests in the selected project, package or source folder:
+JUnitLaunchConfigurationTab_label_filter=Filter:
+JUnitLaunchConfigurationTab_label_filterDescription=( ; = use as delimiter, * = any string, ? = any character)
 JUnitLaunchConfigurationTab_label_keeprunning=&Keep JUnit running after a test run when debugging
 JUnitLaunchConfigurationTab_testdialog_title=Test Selection
 JUnitLaunchConfigurationTab_testdialog_message=Choose a test case or test suite:
